--- a/styles/globals.css
+++ b/styles/globals.css
@@ -439,15 +439,38 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-auto {
   left: auto;
 }
+.right-0 {
+  right: 0px;
+}
+.top-0 {
+  top: 0px;
+}
 .bottom-0 {
   bottom: 0px;
 }
-.bottom-6 {
-  bottom: 1.5rem;
+.z-0 {
+  z-index: 0;
+}
+.z-10 {
+  z-index: 10;
+}
+.-z-10 {
+  z-index: -10;
+}
+.z-20 {
+  z-index: 20;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .ml-5 {
   margin-left: 1.25rem;
@@ -464,86 +487,107 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-12 {
   margin-bottom: 3rem;
 }
+.mt-28 {
+  margin-top: 7rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
+}
+.mb-\[5\.625rem\] {
+  margin-bottom: 5.625rem;
+}
 .mt-3 {
   margin-top: 0.75rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
 }
-.mt-28 {
-  margin-top: 7rem;
-}
-.mb-\[90px\] {
-  margin-bottom: 90px;
-}
-.mb-\[5\.625rem\] {
-  margin-bottom: 5.625rem;
-}
-.mt-\[1\.875rem\] {
-  margin-top: 1.875rem;
-}
-.mb-\[\] {
-  margin-bottom: ;
-}
-.mb-\[0\.625rem\] {
-  margin-bottom: 0.625rem;
-}
-.mt-\[3\.75rem\] {
-  margin-top: 3.75rem;
+.mt-36 {
+  margin-top: 9rem;
 }
 .mb-\[3\.75rem\] {
   margin-bottom: 3.75rem;
 }
-.mt-14 {
-  margin-top: 3.5rem;
+.mt-\[1\.875rem\] {
+  margin-top: 1.875rem;
 }
-.mt-36 {
-  margin-top: 9rem;
+.mb-\[0\.625rem\] {
+  margin-bottom: 0.625rem;
 }
-.block {
-  display: block;
+.mr-10 {
+  margin-right: 2.5rem;
 }
-.inline-block {
-  display: inline-block;
+.mt-auto {
+  margin-top: auto;
+}
+.mr-\[1\.625rem\] {
+  margin-right: 1.625rem;
+}
+.mb-\[3\.125rem\] {
+  margin-bottom: 3.125rem;
+}
+.mr-28 {
+  margin-right: 7rem;
+}
+.mb-\[3rem\] {
+  margin-bottom: 3rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .flex {
   display: flex;
 }
+.hidden {
+  display: none;
+}
 .h-0 {
   height: 0px;
-}
-.h-\[100vh\] {
-  height: 100vh;
-}
-.h-6 {
-  height: 1.5rem;
-}
-.h-3 {
-  height: 0.75rem;
-}
-.h-10 {
-  height: 2.5rem;
-}
-.h-20 {
-  height: 5rem;
-}
-.h-2 {
-  height: 0.5rem;
 }
 .h-24 {
   height: 6rem;
 }
-.h-28 {
-  height: 7rem;
+.h-12 {
+  height: 3rem;
 }
 .h-full {
   height: 100%;
 }
-.h-screen {
-  height: 100vh;
+.h-28 {
+  height: 7rem;
 }
-.h-12 {
-  height: 3rem;
+.h-\[2\.438rem\] {
+  height: 2.438rem;
+}
+.h-\[\] {
+  height: ;
+}
+.h-\[6\.25\] {
+  height: 6.25;
+}
+.h-\[6\.25rem\] {
+  height: 6.25rem;
+}
+.h-3 {
+  height: 0.75rem;
+}
+.h-1 {
+  height: 0.25rem;
+}
+.h-2 {
+  height: 0.5rem;
+}
+.h-10 {
+  height: 2.5rem;
 }
 .w-28 {
   width: 7rem;
@@ -560,8 +604,56 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-full {
   width: 100%;
 }
-.max-w-md {
-  max-width: 28rem;
+.w-9 {
+  width: 2.25rem;
+}
+.w-40 {
+  width: 10rem;
+}
+.w-36 {
+  width: 9rem;
+}
+.w-6 {
+  width: 1.5rem;
+}
+.w-64 {
+  width: 16rem;
+}
+.w-5 {
+  width: 1.25rem;
+}
+.w-56 {
+  width: 14rem;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-24 {
+  width: 6rem;
+}
+.w-\[\] {
+  width: ;
+}
+.w-\[1\.664rem\] {
+  width: 1.664rem;
+}
+.w-\[2\.438rem\] {
+  width: 2.438rem;
+}
+.scale-150 {
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer {
   cursor: pointer;
@@ -572,6 +664,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col {
   flex-direction: column;
 }
+.items-end {
+  align-items: flex-end;
+}
 .items-center {
   align-items: center;
 }
@@ -580,6 +675,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-between {
   justify-content: space-between;
+}
+.overflow-visible {
+  overflow: visible;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -594,48 +692,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
+.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-tl {
+  border-top-left-radius: 0.25rem;
+}
+.rounded-tl-2xl {
+  border-top-left-radius: 1rem;
+}
+.rounded-br {
+  border-bottom-right-radius: 0.25rem;
+}
+.rounded-br-2xl {
+  border-bottom-right-radius: 1rem;
+}
 .border-2 {
   border-width: 2px;
-}
-.border {
-  border-width: 1px;
-}
-.border-b-0 {
-  border-bottom-width: 0px;
-}
-.border-b {
-  border-bottom-width: 1px;
 }
 .border-b-\[1px\] {
   border-bottom-width: 1px;
 }
-.border-b-\[2px\] {
-  border-bottom-width: 2px;
-}
-.border-b-\[3px\] {
-  border-bottom-width: 3px;
-}
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-.border-black\/\[\] {
-  border-color: rgb(0 0 0 / );
-}
 .border-black\/\[0\.03\] {
   border-color: rgb(0 0 0 / 0.03);
-}
-.border-black\/\[1\] {
-  border-color: rgb(0 0 0 / 1);
-}
-.border-black\/\[0\.5\] {
-  border-color: rgb(0 0 0 / 0.5);
-}
-.border-black\/\[0\.05\] {
-  border-color: rgb(0 0 0 / 0.05);
 }
 .border-fun-green {
   --tw-border-opacity: 1;
@@ -657,14 +741,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(254 93 81 / var(--tw-bg-opacity));
 }
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-lime-new {
-  --tw-bg-opacity: 1;
-  background-color: rgb(174 252 65 / var(--tw-bg-opacity));
-}
 .bg-grass-daisy {
   --tw-bg-opacity: 1;
   background-color: rgb(201 175 45 / var(--tw-bg-opacity));
@@ -673,24 +749,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(4 105 7 / var(--tw-bg-opacity));
 }
-.bg-white\/40 {
-  background-color: rgb(255 255 255 / 0.4);
-}
-.bg-white\/10 {
-  background-color: rgb(255 255 255 / 0.1);
-}
-.bg-white\/\[4\] {
-  background-color: rgb(255 255 255 / 4);
-}
-.bg-white\/\[0\.4\] {
-  background-color: rgb(255 255 255 / 0.4);
-}
-.bg-white\/\[0\.04\] {
-  background-color: rgb(255 255 255 / 0.04);
-}
 .bg-chaotic-red {
   --tw-bg-opacity: 1;
   background-color: rgb(114 4 2 / var(--tw-bg-opacity));
+}
+.bg-lime-new {
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 252 65 / var(--tw-bg-opacity));
 }
 .bg-carra-marble {
   --tw-bg-opacity: 1;
@@ -700,35 +765,43 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(0 107 51 / var(--tw-bg-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-neutral-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
-}
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
-.bg-gray-300 {
+.bg-white\/\[0\.04\] {
+  background-color: rgb(255 255 255 / 0.04);
+}
+.bg-blue-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
+}
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
+.bg-white\/\[0\.4\] {
+  background-color: rgb(255 255 255 / 0.4);
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-100 {
+  --tw-bg-opacity: 1;
 }
 .bg-opacity-70 {
   --tw-bg-opacity: 0.7;
 }
-.bg-opacity-100 {
-  --tw-bg-opacity: 1;
+.bg-opacity-60 {
+  --tw-bg-opacity: 0.6;
 }
 .bg-headerJamaicaPattern {
   background-image: linear-gradient(270.12deg, #D33B57 -6.62%, rgba(211, 59, 87, 0) 103.53%);
@@ -748,38 +821,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-tropicalPattern {
   background-image: linear-gradient(194.96deg, #DBC607 -17.18%, #968210 114.92%);
 }
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-.bg-gradient-to-tl {
-  background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+.bg-headerWaterMelonPattern {
+  background-image: linear-gradient(270.12deg, #2C8874 -6.62%, #3E9B88 103.53%);
 }
 .bg-watermelonPattern {
   background-image: linear-gradient(194.96deg, #47A492 -17.18%, #005943 114.92%);
 }
-.bg-headerWaterMelonPattern {
-  background-image: linear-gradient(270.12deg, #2C8874 -6.62%, #3E9B88 103.53%);
-}
-.from-green-400 {
-  --tw-gradient-from: #4ade80;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(74 222 128 / 0));
+.bg-gradient-to-tl {
+  background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
 .from-transparent {
   --tw-gradient-from: transparent;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(0 0 0 / 0));
 }
-.to-blue-500 {
-  --tw-gradient-to: #3b82f6;
-}
 .to-white\/20 {
   --tw-gradient-to: rgb(255 255 255 / 0.2);
-}
-.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
-}
-.fill-fun-green {
-  fill: #006B33;
 }
 .object-contain {
   -o-object-fit: contain;
@@ -788,9 +844,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-3 {
   padding: 0.75rem;
 }
+.p-\[10\] {
+  padding: 10;
+}
+.p-\[10px\] {
+  padding: 10px;
+}
+.p-2 {
+  padding: 0.5rem;
+}
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .py-\[22px\] {
   padding-top: 22px;
@@ -804,21 +873,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.px-28 {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+.py-11 {
+  padding-top: 2.75rem;
+  padding-bottom: 2.75rem;
 }
 .pt-20 {
   padding-top: 5rem;
@@ -829,20 +910,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-\[22px\] {
   padding-top: 22px;
 }
-.pl-2 {
-  padding-left: 0.5rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 .pl-3 {
   padding-left: 0.75rem;
 }
-.pb-6 {
-  padding-bottom: 1.5rem;
+.pl-20 {
+  padding-left: 5rem;
 }
-.text-center {
-  text-align: center;
+.pb-9 {
+  padding-bottom: 2.25rem;
 }
-.align-middle {
-  vertical-align: middle;
+.pt-7 {
+  padding-top: 1.75rem;
 }
 .font-adventPro {
   font-family: "Advent Pro", sans-serif;
@@ -855,16 +936,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-\[72px\] {
-  font-size: 72px;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -872,9 +950,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .font-bold {
   font-weight: 700;
-}
-.font-extrabold {
-  font-weight: 800;
 }
 .font-semibold {
   font-weight: 600;
@@ -893,13 +968,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(166 38 98 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-transparent {
-  color: transparent;
-}
 .text-grass-daisy {
   --tw-text-opacity: 1;
   color: rgb(201 175 45 / var(--tw-text-opacity));
@@ -907,6 +975,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-chaotic-red {
   --tw-text-opacity: 1;
   color: rgb(114 4 2 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-fun-green {
   --tw-text-opacity: 1;
@@ -916,4 +988,106 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-blur: blur(24px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+.duration-500 {
+  transition-duration: 500ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+@media (min-width: 640px) {
+
+  .sm\:absolute {
+    position: absolute;
+  }
+
+  .sm\:right-0 {
+    right: 0px;
+  }
+
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:h-full {
+    height: 100%;
+  }
+
+  .sm\:max-w-md {
+    max-width: 28rem;
+  }
+
+  .sm\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .sm\:rounded-tl-2xl {
+    border-top-left-radius: 1rem;
+  }
+
+  .sm\:rounded-br-2xl {
+    border-bottom-right-radius: 1rem;
+  }
+
+  .sm\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-french-rasberry {
+    --tw-text-opacity: 1;
+    color: rgb(201 42 71 / var(--tw-text-opacity));
+  }
+
+  .sm\:text-plastic-lips {
+    --tw-text-opacity: 1;
+    color: rgb(166 38 98 / var(--tw-text-opacity));
+  }
+
+  .sm\:text-grass-daisy {
+    --tw-text-opacity: 1;
+    color: rgb(201 175 45 / var(--tw-text-opacity));
+  }
+
+  .sm\:text-chaotic-red {
+    --tw-text-opacity: 1;
+    color: rgb(114 4 2 / var(--tw-text-opacity));
+  }
+}
+@media (min-width: 768px) {
+
+  .md\:flex {
+    display: flex;
+  }
+}
+@media (min-width: 1024px) {
+
+  .lg\:flex {
+    display: flex;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:flex {
+    display: flex;
+  }
 }
